--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
 	"license": "ISC",
 	"dependencies": {
 		"argon2": "^0.30.1",
+		"body-parser": "^1.20.1",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"helmet": "^6.0.0",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.7.0",
+		"mongoose": "^6.7.5",
 		"mongoose-sequence": "^5.3.1",
 		"morgan": "^1.10.0",
 		"zod": "^3.19.1"
